--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Hekto - Furniture E-Commerce" />
+  <meta name="description" content="Ecom - Furniture E-Commerce" />
   <link rel="apple-touch-icon" href="/apple-icon.png" />
   <link rel="manifest" href="/manifest.json" />
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -24,7 +24,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <title>Hekto</title>
+  <title>Ecom</title>
 </head>
 
 <body>
