--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <title>Hekto</title>
+  <title>Ecom</title>
 </head>
 
 <body>
